updates, and removing old redux-router dependencies

--- a/src/components/TopImage/styles.scss
+++ b/src/components/TopImage/styles.scss
@@ -3,7 +3,7 @@
 :local(.styles) {
   position: relative;
 
-  background: url(files/nyc.jpg);
+  background: url(files/ren-and-stimpy.jpg);
   background-size: 100% auto;
 
   height: 500px;
